# src/OpenApi/src/Logship.Plex.OpenApi/Model/LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.cs
@@ -1,0 +1,216 @@
+// <auto-generated>
+/*
+ * Plex API
+ *
+ * Plex OpenAPI Spec 
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+#nullable enable
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Text.Json;
+using System.Text.Json.Serialization;
+using System.ComponentModel.DataAnnotations;
+using System.Text.Json.Serialization.Metadata;
+using Logship.Plex.OpenApi.Client;
+
+namespace Logship.Plex.OpenApi.Model
+{
+    /// <summary>
+    /// LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer
+    /// </summary>
+    public partial class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer : IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer" /> class.
+        /// </summary>
+        /// <param name="size">Number of child items</param>
+        /// <param name="metadata">List of child media items</param>
+        [JsonConstructor]
+        public LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer(Option<int?> size = default, Option<List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>?> metadata = default)
+        {
+            SizeOption = size;
+            MetadataOption = metadata;
+            OnCreated();
+        }
+
+        partial void OnCreated();
+
+        /// <summary>
+        /// Used to track the state of Size
+        /// </summary>
+        [JsonIgnore]
+        [global::System.ComponentModel.EditorBrowsable(global::System.ComponentModel.EditorBrowsableState.Never)]
+        public Option<int?> SizeOption { get; private set; }
+
+        /// <summary>
+        /// Number of child items
+        /// </summary>
+        /// <value>Number of child items</value>
+        [JsonPropertyName("size")]
+        public int? Size { get { return this.SizeOption; } set { this.SizeOption = new(value); } }
+
+        /// <summary>
+        /// Used to track the state of Metadata
+        /// </summary>
+        [JsonIgnore]
+        [global::System.ComponentModel.EditorBrowsable(global::System.ComponentModel.EditorBrowsableState.Never)]
+        public Option<List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>?> MetadataOption { get; private set; }
+
+        /// <summary>
+        /// List of child media items
+        /// </summary>
+        /// <value>List of child media items</value>
+        [JsonPropertyName("Metadata")]
+        public List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>? Metadata { get { return this.MetadataOption; } set { this.MetadataOption = new(value); } }
+
+        /// <summary>
+        /// Gets or Sets additional properties
+        /// </summary>
+        [JsonExtensionData]
+        public Dictionary<string, JsonElement> AdditionalProperties { get; } = new Dictionary<string, JsonElement>();
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer {\n");
+            sb.Append("  Size: ").Append(Size).Append("\n");
+            sb.Append("  Metadata: ").Append(Metadata).Append("\n");
+            sb.Append("  AdditionalProperties: ").Append(AdditionalProperties).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+    /// <summary>
+    /// A Json converter for type <see cref="LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer" />
+    /// </summary>
+    public class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerJsonConverter : JsonConverter<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer>
+    {
+        /// <summary>
+        /// Deserializes json to <see cref="LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer" />
+        /// </summary>
+        /// <param name="utf8JsonReader"></param>
+        /// <param name="typeToConvert"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <returns></returns>
+        /// <exception cref="JsonException"></exception>
+        public override LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer Read(ref Utf8JsonReader utf8JsonReader, Type typeToConvert, JsonSerializerOptions jsonSerializerOptions)
+        {
+            int currentDepth = utf8JsonReader.CurrentDepth;
+
+            if (utf8JsonReader.TokenType != JsonTokenType.StartObject && utf8JsonReader.TokenType != JsonTokenType.StartArray)
+                throw new JsonException();
+
+            JsonTokenType startingTokenType = utf8JsonReader.TokenType;
+
+            Option<int?> size = default;
+            Option<List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>?> metadata = default;
+
+            while (utf8JsonReader.Read())
+            {
+                if (startingTokenType == JsonTokenType.StartObject && utf8JsonReader.TokenType == JsonTokenType.EndObject && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (startingTokenType == JsonTokenType.StartArray && utf8JsonReader.TokenType == JsonTokenType.EndArray && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (utf8JsonReader.TokenType == JsonTokenType.PropertyName && currentDepth == utf8JsonReader.CurrentDepth - 1)
+                {
+                    string? localVarJsonPropertyName = utf8JsonReader.GetString();
+                    utf8JsonReader.Read();
+
+                    switch (localVarJsonPropertyName)
+                    {
+                        case "size":
+                            if (utf8JsonReader.TokenType != JsonTokenType.Null)
+                                size = new Option<int?>(utf8JsonReader.GetInt32());
+                            break;
+                        case "Metadata":
+                            if (utf8JsonReader.TokenType != JsonTokenType.Null)
+                                metadata = new Option<List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>?>(JsonSerializer.Deserialize<List<LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerMetadataInner>>(ref utf8JsonReader, jsonSerializerOptions)!);
+                            break;
+                        default:
+                            break;
+                    }
+                }
+            }
+
+            if (size.IsSet && size.Value == null)
+                throw new ArgumentNullException(nameof(size), "Property is not nullable for class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.");
+
+            if (metadata.IsSet && metadata.Value == null)
+                throw new ArgumentNullException(nameof(metadata), "Property is not nullable for class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.");
+
+            return new LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer(size, metadata);
+        }
+
+        /// <summary>
+        /// Serializes a <see cref="LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public override void Write(Utf8JsonWriter writer, LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer, JsonSerializerOptions jsonSerializerOptions)
+        {
+            writer.WriteStartObject();
+
+            WriteProperties(writer, libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer, jsonSerializerOptions);
+            writer.WriteEndObject();
+        }
+
+        /// <summary>
+        /// Serializes the properties of <see cref="LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public void WriteProperties(Utf8JsonWriter writer, LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer, JsonSerializerOptions jsonSerializerOptions)
+        {
+            if (libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.MetadataOption.IsSet && libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.Metadata == null)
+                throw new ArgumentNullException(nameof(libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.Metadata), "Property is required for class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.");
+
+            if (libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.SizeOption.IsSet)
+                writer.WriteNumber("size", libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.SizeOption.Value!.Value);
+
+            if (libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.MetadataOption.IsSet)
+            {
+                writer.WritePropertyName("Metadata");
+                JsonSerializer.Serialize(writer, libraryMetadataMetadataIdChildrenGet200ResponseMediaContainer.Metadata, jsonSerializerOptions);
+            }
+        }
+    }
+
+    /// <summary>
+    /// The LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerSerializationContext
+    /// </summary>
+    [JsonSourceGenerationOptions(WriteIndented = true, GenerationMode = JsonSourceGenerationMode.Metadata | JsonSourceGenerationMode.Serialization)]
+    [JsonSerializable(typeof(LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainer))]
+    public partial class LibraryMetadataMetadataIdChildrenGet200ResponseMediaContainerSerializationContext : JsonSerializerContext { }
+}
